Corrections CSS diverses pour aligner à gauche les éléments.

--- a/portail/themes/theme_boosted/css/components/pre_content.css
+++ b/portail/themes/theme_boosted/css/components/pre_content.css
@@ -7,4 +7,11 @@
 
 .breadcrumb {
   font-family: "Helvetica Neue";
+    padding-left: 0;
+}
+
+@media (max-width: 480px) {
+    .container .row{
+        margin: 0;
+    }
 }
